# store_analysis

./: .gitignore  README.md  dashboard.py  database_utils.py  load_db.py  pyproject.toml  reload_db.sh  run.sh  run_dashboard.sh  setup.py
sql/: customer_summary.sql
sql/indexes/: customers_idx.sql  items_idx.sql  orders_idx.sql
sql/views/: customer_summary.sql  order_velocity.sql  store_lookup.sql
