[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "store_analysis"
version = "0.1.0"
description = "A tool to load and analyze store data from CSV files into SQLite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
]
